--- a/pohledy/akce.phtml
+++ b/pohledy/akce.phtml
@@ -3,11 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            </head>
+
+        <!-- javascript a jquery -->
+        <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+        <script src="pohledy/script.js"></script> 
+    </head>
     <body>
-
-
-
 
         <!-- Výpis zpráv -->
         <?php if (isset($this->zpravy) && !empty($this->zpravy)): ?>
@@ -25,7 +28,7 @@
         <?php endif; ?>
 
         <!-- Vypis akce -->
-        <div id="vypis">
+        <div id="vypis_a">
             <?php echo '<p>'.$konkretniAkce['popisek_akce'].'</p>';?>
             <h4>Datum zahajeni: </h4>
             <?php echo $konkretniAkce['datum_zahajeni']; ?>
@@ -180,7 +183,7 @@
         <!-- ------------------------------------------------SWITCH---------------------------------------------------------------- -->
 
         <!-- Edit -->
-        <div id="edit">
+        <div id="edit_a">
 
             <h2>Edit akce</h2>
             <form method="post">
@@ -205,7 +208,7 @@
                     <input  type="text" name="poradatel" value="<?php echo $konkretniAkce['poradatel']; ?>">
                     <!-- Opakovanost -->
                     <label for="opak">Opakovanost: </label>
-                    <select name="id_opak">
+                    <select name="id_opak" class="select_opak" style="width: 100%">
                         <?php foreach ($this->data['opak'] as $opak): ?>
                             <option value="<?php echo $opak['id_opak']; ?>" >
                                 <?php echo $opak['nazev_opak'] ?>
@@ -214,7 +217,7 @@
                     </select>
 
                 <label for="kolo">Kolo: </label>
-                <select name="id_kolo">
+                <select name="id_kolo" class="select_kolo" style="width: 100%">
                     <?php foreach ($this->data['kolo'] as $kolo): ?>
                         <option value="<?php echo $kolo['id_kolo']; ?>" >
                             <?php echo $kolo['nazev_kolo'] ?>
@@ -234,7 +237,7 @@
                     <h2>Disciplíny</h2>
                 <!-- Přidání disciplín -->
                     <div class="divAkceDisc">
-                        <select name="pridat_id_disc[]" class="disc" style="width: 100%" multiple>
+                        <select name="pridat_id_disc[]" class="select_disc" style="width: 100%" multiple>
                             <?php foreach ($this->data['disc'] as $disc){
                                 $skipDisc = false;
                                 foreach ($this->data['akcedisc'] as $ad) {
@@ -255,8 +258,8 @@
 
                 <!-- Výběr Discipliny s checkboxy-->
                     <div>
-                        <label for="cb_smazat">Tlačítko pro smazání vybraných disciplín</label>
-                        <button type="submit" name="cb_smazat">Smazat</button>
+                        <label for="cb_smazat">Tlačítko pro odebrání vybraných disciplín</label>
+                        <button type="submit" name="cb_smazat">Odebrat</button>
                         <?php 
                             foreach ($this->data['akcedisc'] as $ad){
                                 if($ad['id_akce'] != $konkretniAkce['id_akce']){
@@ -273,64 +276,13 @@
                                 }
                                         ?>
                     </div>                   
-
                 </div>
-
                 <!-- Tlačítka pro Uložení a Smazání -->
                 <button type="submit" name="ulozit">Uložit</button>
                 <label for="cele_smazat">Tlačítko pro smazání akce</label>
                 <button type="submit" name="cele_smazat">Smazat</button>
             </form>
         </div>
-
-<!-- javascript a jquery -->
-        <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-
-        <!-- javascript (Combobox) -->
-        <script>
-        $(document).ready(function() {
-            var max_pocet = 10;
-            var wrapper = $("#combobox-blok");
-            var btn = $(".btnDisc");
-
-            var pocet = 0;
-
-            // Applynuti select2 na vypsané disciplíny
-            $('.editselect').select2({dropdownAutoWidth : true});
-
-            // Applynuti select2 na vypsané disciplíny
-                $('.uziv').select2({
-                    dropdownAutoWidth : true,
-                    placeholder: "-- Výběr sportovců --"
-                });
-
-                $('.disc').select2({
-                    dropdownAutoWidth : true,
-                    placeholder: "-- Výběr disciplín --"
-            });
-        });
-        </script>
-
-        <!-- javascript (Switch) -->
-        <script>
-            $(document).ready(function() {
-                var vypis = $("#vypis");
-                var edit = $("#edit");
-                edit.css("display", "none");
-
-                $("#switch").click(function() {
-                    if (vypis.css("display") === "block") {
-                        vypis.css("display", "none");
-                        edit.css("display", "block");
-                    } else {
-                        vypis.css("display", "block");
-                        edit.css("display", "none");
-                    }
-                });
-            });
-        </script>
 
     </body>
 </html>
