--- a/pohledy/importcsv.phtml
+++ b/pohledy/importcsv.phtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <?php if ($this->data['session']['opravneni'] >= 1) : ?>
     <h1>Importovat CSV do databáze</h1>
 
     <!-- Formulář pro vyprázdnění databáze před importováním studentů -->
@@ -22,5 +23,8 @@
         </label>
         <button type="submit" name="import">Importovat</button>
     </form>
+    <?php elseif($this->data['session']['opravneni'] === null) : $this->presmeruj("ldap"); 
+    elseif($this->data['session']['opravneni'] === 0) : $this->presmeruj("uvod");
+    endif ?>
 </body>
 </html>
