--- a/pohledy/disciplina.phtml
+++ b/pohledy/disciplina.phtml
@@ -11,6 +11,7 @@
         <script src="pohledy/script.js"></script> 
     </head>
     <body>
+    <?php if ($this->data['session']['opravneni'] >= 1) : ?>
 
         <h1>Přidání a Výpis všech disciplín</h1>
 
@@ -86,6 +87,9 @@
             <p>Nejsou k dispozici žádné disciplíny.</p>
         <?php endif; ?>
         
+        <?php elseif($this->data['session']['opravneni'] === null) : $this->presmeruj("ldap"); 
+        elseif($this->data['session']['opravneni'] === 0) : $this->presmeruj("uvod");
+        endif ?>
     </body>
 </html>
 
