--- a/pohledy/kolo.phtml
+++ b/pohledy/kolo.phtml
@@ -6,7 +6,7 @@
 
     </head>
     <body>
-
+    <?php if ($this->data['session']['opravneni'] >= 1) : ?>
         <h1>Přidaní kola pro Akce</h1>
 
         <!-- Výpis zpráv -->
@@ -51,5 +51,8 @@
             <p>Nejsou k dispozici žádné kola.</p>
         <?php endif; ?>
 
+        <?php elseif($this->data['session']['opravneni'] === null) : $this->presmeruj("ldap"); 
+        elseif($this->data['session']['opravneni'] === 0) : $this->presmeruj("uvod");
+        endif ?>
     </body>
 </html>
