--- a/pohledy/sportovci.phtml
+++ b/pohledy/sportovci.phtml
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-
+<?php if ($this->data['session']['opravneni'] >= 1) : ?>
     <table id="sportovciTable">
         <thead>
             <tr>
@@ -26,6 +26,7 @@
                 <th>Tým</th>
                 <th>Rekord</th>
                 <th>Mazání</th>
+
             </tr>
             <tr class="filters">
                 <th rowspan="1" colspan="1">
@@ -186,5 +187,8 @@
     });
 });
     </script>
+<?php elseif($this->data['session']['opravneni'] === null) : $this->presmeruj("ldap"); 
+elseif($this->data['session']['opravneni'] === 0) : $this->presmeruj("uvod");
+endif ?>
 </body>
 </html>
