--- a/pohledy/sporty.phtml
+++ b/pohledy/sporty.phtml
@@ -6,7 +6,7 @@
 
     </head>
     <body>
-
+    <?php if ($this->data['session']['opravneni'] >= 1) : ?>
         <h1>Přidání a Výpis všech sportů</h1>
 
         <!-- Výpis zpráv -->
@@ -58,6 +58,8 @@
         <?php else: ?>
             <p>Nejsou k dispozici žádné sporty.</p>
         <?php endif; ?>
-
+        <?php elseif($this->data['session']['opravneni'] === null) : $this->presmeruj("ldap"); 
+        elseif($this->data['session']['opravneni'] === 0) : $this->presmeruj("uvod");
+        endif ?>
     </body>
 </html>
