--- a/pohledy/uroven.phtml
+++ b/pohledy/uroven.phtml
@@ -6,6 +6,8 @@
  
     </head>
     <body>
+        <?php if ($this->data['session']['opravneni'] >= 1) : ?>
+
         <h1>Přidaní úrovní pro sportovce</h1>
 
         <!-- Výpis zpráv -->
@@ -51,6 +53,8 @@
             <p>Nejsou k dispozici žádné urovne.</p>
         <?php endif; ?>
 
-
+        <?php elseif($this->data['session']['opravneni'] === null) : $this->presmeruj("ldap"); 
+        elseif($this->data['session']['opravneni'] === 0) : $this->presmeruj("uvod");
+        endif ?>
     </body>
 </html>
