--- a/pohledy/vytvorakce.phtml
+++ b/pohledy/vytvorakce.phtml
@@ -11,6 +11,9 @@
         <script src="pohledy/script.js"></script> 
     </head>
     <body>
+
+
+    <?php if ($this->data['session']['opravneni'] >= 1) : ?>
         <h1>Vytvoreni Akce</h1>
 
         <!-- Výpis zpráv -->
@@ -73,6 +76,8 @@
             <!-- Tlačítka pro Přidání -->
             <button type="submit" name="pridej">Přidat záznam</button>
         </form>
-
+        <?php elseif($this->data['session']['opravneni'] === null) : $this->presmeruj("ldap"); 
+        elseif($this->data['session']['opravneni'] === 0) : $this->presmeruj("uvod");
+        endif ?>
     </body>
 </html>
