--- a/pohledy/vytvorsoupisku.phtml
+++ b/pohledy/vytvorsoupisku.phtml
@@ -11,7 +11,7 @@
         <script src="pohledy/script.js"></script> 
     </head>
     <body>
-
+    <?php if ($this->data['session']['opravneni'] >= 1) : ?>
 
         <h1>Generování soupisky</h1>
 
@@ -97,6 +97,8 @@
 
             });
         </script>
-
+    <?php elseif($this->data['session']['opravneni'] === null) : $this->presmeruj("ldap"); 
+    elseif($this->data['session']['opravneni'] === 0) : $this->presmeruj("uvod");
+    endif ?>
     </body>
 </html>
